name: FigLeaf
version: 0.0.1.0
build-type: Simple
cabal-version: >= 1.10

executable FigLeaf
    main-is: Main.hs
    build-depends:  base,
                    directory,
                    filepath,
                    containers,
                    split,
                    semigroups,
                    mtl,
                    Cabal
    default-language: Haskell2010
    other-modules:  Commands,
                    Parse,
                    Serialize,
                    Tree

Test-Suite TestSuite
    type: exitcode-stdio-1.0
    main-is: test/Tests.hs
    hs-source-dirs: ., test
    build-depends:  base,
                    containers,
                    split,
                    test-framework,
                    test-framework-hunit,
                    mtl,
                    semigroups,
                    HUnit
    default-language: Haskell2010
    other-modules: Commands,
                   Parse,
                   Serialize,
                   TestCommands,
                   TestParseAndSerialize,
                   TestUpdates,
                   Tree